--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -8,15 +8,22 @@ body{
     padding: 0;
 }
 h1, h2 {
-    font-family: "Open Sans", sans-serif;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     font-weight: 700;
     font-style: italic;
     padding: 10px 15px 10px 15px;
 }
 h3{
     font-family: "Imperial Script", serif;
+    font-weight: 400;
+    font-style: italic;
+    padding: auto;
 }
 
-p {
+p { font-family: 'Times New Roman', Times, serif ;
+    font-weight: 600 ;
+    font-style: oblique;
+    padding: 15px 10px 15px 10px;
+
 
 }
